[gd_scene load_steps=14 format=3 uid="uid://dkrek7p2cv234"]

[ext_resource type="Script" uid="uid://bekjf57kc8b32" path="res://Scripts/Player/Bodies/heavy_tank_body.gd" id="1_i5611"]
[ext_resource type="PackedScene" uid="uid://dhltcbi32x2dk" path="res://Scenes/Particles/tread_marks.tscn" id="2_sq85k"]
[ext_resource type="Script" uid="uid://clpxtcfre43xh" path="res://Scripts/ComponentScripts/HurtBox.gd" id="2_um20v"]
[ext_resource type="Texture2D" uid="uid://bxoyywffl1vvv" path="res://Assets/Images/sprites/Player/heavy_tank/tank-4-body-drill.png" id="3_345ok"]
[ext_resource type="Script" uid="uid://doa2bqqqcj8ba" path="res://Scripts/ComponentScripts/pickup_box_component.gd" id="3_fjbni"]
[ext_resource type="PackedScene" uid="uid://bsi1gw5kk2uiy" path="res://Scenes/Components/health_component.tscn" id="4_5hkfv"]
[ext_resource type="Script" uid="uid://cfdggjkh5asx8" path="res://Scripts/ComponentScripts/terrain_detection_component.gd" id="5_gifja"]
[ext_resource type="Script" uid="uid://d18levtavdqhi" path="res://Scripts/ComponentScripts/HitBox.gd" id="5_jqgpj"]
[ext_resource type="PackedScene" uid="uid://dbvl81lhl26j6" path="res://Scenes/Particles/smoke_particles.tscn" id="9_nfufg"]
[ext_resource type="PackedScene" uid="uid://rdbqt3rbbq7e" path="res://Scenes/Particles/burn_particles.tscn" id="10_ica6i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_av6f4"]
size = Vector2(160, 150)

[sub_resource type="CircleShape2D" id="CircleShape2D_4hncb"]
radius = 140.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d5pti"]
radius = 9.0

[node name="HeavyTankBody" type="Node2D"]
use_parent_material = true
script = ExtResource("1_i5611")
acceleration = 1.0
decceleration = 5.0

[node name="TreadMarks" parent="." instance=ExtResource("2_sq85k")]
position = Vector2(-63, 70)
amount = 14

[node name="TreadMarks2" parent="." instance=ExtResource("2_sq85k")]
position = Vector2(63, 70)
amount = 14

[node name="TreadMarks3" parent="." instance=ExtResource("2_sq85k")]
position = Vector2(-57, -9)
amount = 14

[node name="TreadMarks4" parent="." instance=ExtResource("2_sq85k")]
position = Vector2(57, -9)
amount = 14

[node name="Sprite2D" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(0, -24)
scale = Vector2(5, 5)
texture = ExtResource("3_345ok")
hframes = 3

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_mask = 20
script = ExtResource("2_um20v")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_av6f4")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 4
script = ExtResource("5_jqgpj")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
position = Vector2(0, -100)
polygon = PackedVector2Array(0, -30, 80, 0, 80, 25, -80, 25, -80, 0)

[node name="PickupBox" type="Area2D" parent="."]
collision_mask = 8
script = ExtResource("3_fjbni")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupBox"]
position = Vector2(-1, -7)
shape = SubResource("CircleShape2D_4hncb")

[node name="HealthComponent" parent="." instance=ExtResource("4_5hkfv")]
max_health = 3000.0

[node name="DamageNumbersOrigin" type="Marker2D" parent="."]

[node name="TerrainDetectionComponent" type="Area2D" parent="."]
collision_mask = 32
script = ExtResource("5_gifja")
terrain_speed_mods = Array[float]([1.0, 1.1, 0.9, 1.0])

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerrainDetectionComponent"]
shape = SubResource("CircleShape2D_d5pti")

[node name="BoostCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="BoostSmokeParticles" parent="." instance=ExtResource("9_nfufg")]
modulate = Color(0.412152, 0.412152, 0.412152, 1)
position = Vector2(26, 75)
emitting = false
amount = 24

[node name="BoostSmokeParticles2" parent="." instance=ExtResource("9_nfufg")]
modulate = Color(0.412152, 0.412152, 0.412152, 1)
position = Vector2(-26, 75)
emitting = false
amount = 24

[node name="DamageSmokeParticles" parent="." instance=ExtResource("9_nfufg")]
modulate = Color(0.270222, 0.270222, 0.270222, 1)
emitting = false
amount = 6
emission_shape = 3
emission_rect_extents = Vector2(30, 50)

[node name="DamageBurnParticles" parent="." instance=ExtResource("10_ica6i")]
emitting = false
amount = 12
emission_shape = 3
emission_rect_extents = Vector2(30, 50)

[connection signal="area_entered" from="HitBox" to="HitBox" method="_on_area_entered"]
